--- a/domaci4.html
+++ b/domaci4.html
@@ -21,9 +21,22 @@
                 <div class="box left">
                     Levi box
                 </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis lacinia sapien massa, at pellentesque elit commodo at. Quisque sapien justo, gravida id pulvinar lobortis, maximus tristique turpis. In vitae felis sed eros fringilla accumsan. Ut rhoncus rhoncus ligula. Fusce vel nisl ultricies, malesuada odio sit amet, posuere mauris. Donec porta orci turpis, vitae sollicitudin ipsum luctus id. Proin ligula turpis, convallis iaculis pulvinar eu, faucibus quis metus. Integer eget odio mollis, dapibus neque eu, pretium eros. Donec hendrerit dignissim molestie. Aenean facilisis mauris eget facilisis efficitur. Pellentesque lacinia odio eros, eget rutrum ex commodo in. Ut cursus mollis scelerisque. Duis ornare augue eget elit fermentum fermentum. Ut vitae nunc massa. Fusce tempor pulvinar nunc non bibendum. Nunc efficitur quam cursus, ornare eros nec, placerat diam.
-Nullam non cursus nibh. Maecenas laoreet congue diam. Curabitur sit amet metus in ipsum sodales vulputate. Pellentesque lobortis, felis nec tempor mattis, metus velit dignissim dolor, vitae suscipit quam erat porttitor sem. Suspendisse potenti. Etiam a vestibulum neque. Integer id erat leo. Donec malesuada, ligula in iaculis laoreet, sapien metus auctor nulla, ut mollis ligula diam dapibus justo. Mauris placerat nunc ut nisl scelerisque vulputate. Nulla facilisi. Quisque nulla tortor, tempor scelerisque justo ac, fringilla rutrum urna. Vestibulum facilisis ipsum blandit pellentesque gravida. In viverra vel sapien nec suscipit. Nunc et pulvinar sem. Integer nunc massa, fermentum non tincidunt blandit, vulputate dignissim dolor. Maecenas vitae dui leo.</p>
-            </section>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis lacinia sapien massa, at pellentesque elit commodo at.
+                    Quisque sapien justo, gravida id pulvinar lobortis, maximus tristique turpis. In vitae felis sed eros fringilla
+                    accumsan. Ut rhoncus rhoncus ligula. Fusce vel nisl ultricies, malesuada odio sit amet, posuere mauris. Donec porta
+                    orci turpis, vitae sollicitudin ipsum luctus id. Proin ligula turpis, convallis iaculis pulvinar eu, faucibus quis
+                    metus. Integer eget odio mollis, dapibus neque eu, pretium eros. Donec hendrerit dignissim molestie. Aenean
+                    facilisis mauris eget facilisis efficitur. Pellentesque lacinia odio eros, eget rutrum ex commodo in. Ut cursus
+                    mollis scelerisque. Duis ornare augue eget elit fermentum fermentum. Ut vitae nunc massa. Fusce tempor pulvinar
+                    nunc non bibendum. Nunc efficitur quam cursus, ornare eros nec, placerat diam.
+                    Nullam non cursus nibh. Maecenas laoreet congue diam. Curabitur sit amet metus in ipsum sodales vulputate.
+                    Pellentesque lobortis, felis nec tempor mattis, metus velit dignissim dolor, vitae suscipit quam erat porttitor
+                    sem. Suspendisse potenti. Etiam a vestibulum neque. Integer id erat leo. Donec malesuada, ligula in iaculis
+                    laoreet, sapien metus auctor nulla, ut mollis ligula diam dapibus justo. Mauris placerat nunc ut nisl scelerisque
+                    vulputate. Nulla facilisi. Quisque nulla tortor, tempor scelerisque justo ac, fringilla rutrum urna. Vestibulum
+                    facilisis ipsum blandit pellentesque gravida. In viverra vel sapien nec suscipit. Nunc et pulvinar sem. Integer
+                    nunc massa, fermentum non tincidunt blandit, vulputate dignissim dolor. Maecenas vitae dui leo.</p>
+                </section>
             <h2>Sekcija 3 - boxu float right</h2>
             <section>
                 <div class="box right">
